2010-10-04 12:02  paddockd

	* [r202] ChangeLog, src/slimaudio/slimaudio.h,
	  src/squeezeslave/squeezeslave.c: Increased output buffer size to
	  2822400 (8s) as r201 still exhibits audio dropouts on windows.
	  Increased version to 202.

2010-10-04 11:34  paddockd

	* [r201] ChangeLog, src/slimaudio/slimaudio.h,
	  src/squeezeslave/squeezeslave.c: Increased decoder/output buffer
	  sizes as r200 50% reduction introduced audio dropouts.
	  Revision Decoder sizes in bytes r199:3145728 r200:1572864
	  r201:2097152
	  Revision Output sizes in bytes r199:3528000 (10s) r200:1764000
	  (5s) r201:2116800 (6s)
	  Increased version to 201.

2010-10-02 11:37  paddockd

	* [r200] ChangeLog, ReleaseNotes, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_decoder_flac.c,
	  src/slimaudio/slimaudio_http.c, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added DEBUG statements to flac
	  decoder.
	  Reduced both OUTPUT and DECODER buffer sizes by 50%.
	  Reverted r169 decode_bytes_available commit.
	  Use autostart_threshold of 40000 instead of server threshold for
	  the first track only for mp3 and ogg streams.
	  Increased version to 200.

2010-09-29 15:45  paddockd

	* [r199] ChangeLog, makefile.sol10-intel-display,
	  makefile.sol10-sparc-display, makefile.sol9-sparc-display:
	  Removed -display from solaris binary name.

2010-09-29 13:45  paddockd

	* [r198] ChangeLog, src/squeezeslave/interactive.c,
	  src/squeezeslave/squeezeslave.c: Changed interactive printable
	  call to return 7-bit ascii only to avoid multibyte character
	  locales messing up the display.
	  Increased version to 198.

2010-09-29 11:51  paddockd

	* [r197] ChangeLog, ReleaseNotes, ReleaseNotes-0.9, TODO,
	  config/custom-convert.conf.441, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added PA callback buffer
	  underflow debug message.
	  Increased version to 197.

2010-09-24 12:41  paddockd

	* [r196] ChangeLog, TODO, patches/httpnonblocking.patch,